1.4 bug fixes